--- a/.github/workflows/pr-verification.yml
+++ b/.github/workflows/pr-verification.yml
@@ -3,6 +3,12 @@ name: PR Verification (All Terraform Modules)
 
 on:
   workflow_call: {}
+  pull_request:
+    types: [opened, synchronize, reopened]
+
+permissions:
+  contents: read
+  pull-requests: write
 
 jobs:
   find-all-terraform-modules:
@@ -43,9 +49,49 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: hashicorp/setup-terraform@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
       - run: terraform init
         working-directory: ${{ matrix.dir }}
       - run: terraform validate
         working-directory: ${{ matrix.dir }}
       - run: terraform plan -out=plan.out
         working-directory: ${{ matrix.dir }}
+      
+      - name: Generate Terraform plan JSON
+        run: terraform show -json plan.out > plan.json
+        working-directory: ${{ matrix.dir }}
+      
+      - name: Copy check.py to current directory
+        run: cp .github/workflows/check.py .
+        working-directory: ${{ matrix.dir }}
+      
+      - name: Run Terraform plan analysis
+        id: plan-analysis
+        run: |
+          echo "PLAN_OUTPUT<<EOF" >> $GITHUB_OUTPUT
+          python check.py
+          echo "EOF" >> $GITHUB_OUTPUT
+        working-directory: ${{ matrix.dir }}
+      
+      - name: Comment PR with Terraform plan changes
+        if: github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const output = `## Terraform Plan Changes for \`${{ matrix.dir }}\`
+            
+            \`\`\`
+            ${{ steps.plan-analysis.outputs.PLAN_OUTPUT }}
+            \`\`\`
+            `;
+            
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            });
