--- a/.github/workflows/pr-verification.yml
+++ b/.github/workflows/pr-verification.yml
@@ -8,6 +8,14 @@ on:
         description: 'Pull Request number for commenting'
         required: false
         type: string
+      target_repo_owner:
+        description: 'Owner of the repository where PR should be commented'
+        required: false
+        type: string
+      target_repo_name:
+        description: 'Name of the repository where PR should be commented'
+        required: false
+        type: string
   pull_request:
     types: [opened, synchronize, reopened]
 
@@ -145,6 +153,17 @@ jobs:
         run: |
           echo "✅ Terraform plan analysis completed successfully for ${{ matrix.dir }}"
       
+      - name: Debug PR commenting info
+        run: |
+          echo "🔍 Debug Info for PR Commenting:"
+          echo "  PR Number (direct): ${{ github.event.pull_request.number }}"
+          echo "  PR Number (input): ${{ inputs.pr_number }}"
+          echo "  Target Owner (input): ${{ inputs.target_repo_owner }}"
+          echo "  Target Repo (input): ${{ inputs.target_repo_name }}"
+          echo "  Context Owner: ${{ github.repository_owner }}"
+          echo "  Context Repo: ${{ github.event.repository.name }}"
+          echo "  Event Name: ${{ github.event_name }}"
+      
       - name: Comment PR with Terraform plan changes
         if: github.event.pull_request.number || inputs.pr_number
         uses: actions/github-script@v7
@@ -164,18 +183,26 @@ jobs:
               const prNumber = context.payload.pull_request?.number || 
                               '${{ inputs.pr_number }}';
               
+              // Get target repository info
+              const targetOwner = '${{ inputs.target_repo_owner }}' || context.repo.owner;
+              const targetRepo = '${{ inputs.target_repo_name }}' || context.repo.repo;
+              
+              console.log(`Attempting to comment on PR #${prNumber} in ${targetOwner}/${targetRepo}`);
+              
               if (prNumber && prNumber !== '') {
                 await github.rest.issues.createComment({
                   issue_number: parseInt(prNumber),
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
+                  owner: targetOwner,
+                  repo: targetRepo,
                   body: output
                 });
-                console.log(`✅ Successfully commented on PR #${prNumber}`);
+                console.log(`✅ Successfully commented on PR #${prNumber} in ${targetOwner}/${targetRepo}`);
               } else {
                 console.log('❌ No PR number available - cannot comment');
                 console.log('Direct PR event:', !!context.payload.pull_request?.number);
                 console.log('Input PR number:', '${{ inputs.pr_number }}');
+                console.log('Context repo:', context.repo.owner + '/' + context.repo.repo);
+                console.log('Target repo:', targetOwner + '/' + targetRepo);
               }
             } catch (error) {
               console.log('❌ Failed to comment on PR:', error.message);
