--- a/.github/workflows/pr-verification.yml
+++ b/.github/workflows/pr-verification.yml
@@ -20,6 +20,18 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
+  pr-verification-status:
+    name: PR Verification Status
+    runs-on: ubuntu-latest
+    outputs:
+      status: ${{ steps.set-status.outputs.status }}
+    steps:
+      - name: Set verification status
+        id: set-status
+        run: |
+          echo "status=running" >> $GITHUB_OUTPUT
+          echo "✅ PR Verification workflow started successfully"
+
   find-all-terraform-modules:
     name: Find All Terraform Modules
     runs-on: ubuntu-latest
@@ -45,7 +57,7 @@ jobs:
 
   terraform-plan:
     name: Terraform Plan
-    needs: find-all-terraform-modules
+    needs: [pr-verification-status, find-all-terraform-modules]
     if: needs.find-all-terraform-modules.outputs.tf_dirs != '[]'
     runs-on: ubuntu-latest
     strategy:
@@ -264,3 +276,21 @@ jobs:
               console.log('Error response:', error.response?.data);
               console.log('This could be due to permissions or repository access issues');
             }
+
+  pr-verification-complete:
+    name: PR Verification
+    runs-on: ubuntu-latest
+    needs: [pr-verification-status, find-all-terraform-modules]
+    if: always()
+    steps:
+      - name: Final status check
+        run: |
+          echo "🏁 PR Verification workflow completed"
+          echo "Status: ${{ needs.pr-verification-status.outputs.status }}"
+          if [ "${{ needs.terraform-plan.result }}" = "success" ] || [ "${{ needs.terraform-plan.result }}" = "skipped" ]; then
+            echo "✅ All checks passed or skipped"
+            exit 0
+          else
+            echo "❌ Some checks failed"
+            exit 1
+          fi
