--- a/.github/workflows/pr-verification.yml
+++ b/.github/workflows/pr-verification.yml
@@ -18,7 +18,7 @@ on:
         type: string
       github_token:
         description: 'GitHub token with permissions to comment on the target repository'
-        required: true
+        required: false
         type: string
   pull_request:
     types: [opened, synchronize, reopened]
@@ -88,7 +88,7 @@ jobs:
         uses: actions/github-script@v7
         continue-on-error: true
         with:
-          github-token: ${{ inputs.github_token }}
+          github-token: ${{ inputs.github_token || secrets.GITHUB_TOKEN }}
           script: |
             const targetOwner = '${{ inputs.target_repo_owner }}' || context.repo.owner;
             const targetRepo = '${{ inputs.target_repo_name }}' || context.repo.repo;
