--- a/.github/workflows/pr-verification.yml
+++ b/.github/workflows/pr-verification.yml
@@ -20,6 +20,10 @@ on:
         description: 'GitHub token with permissions to comment on the target repository'
         required: false
         type: string
+    secrets:
+      GITHUB_TOKEN:
+        description: 'GitHub token for fallback when github_token input is not provided'
+        required: false
   pull_request:
     types: [opened, synchronize, reopened]
 
