--- a/.github/workflows/pr-verification.yml
+++ b/.github/workflows/pr-verification.yml
@@ -1,4 +1,3 @@
-# centralspendshield/.github/workflows/pr-verification.yml
 name: PR Verification (All Terraform Modules)
 
 on:
@@ -16,12 +15,16 @@ on:
         description: 'Name of the repository where PR should be commented'
         required: false
         type: string
+    secrets:
       github_token:
         description: 'GitHub token with permissions to comment on the target repository'
-        required: false
-        type: string
-  pull_request:
-    types: [opened, synchronize, reopened]
+        required: true
+      AWS_ACCESS_KEY_ID:
+        required: true
+      AWS_SECRET_ACCESS_KEY:
+        required: true
+      AWS_DEFAULT_REGION:
+        required: true
 
 jobs:
   find-all-terraform-modules:
@@ -62,18 +65,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: hashicorp/setup-terraform@v3
-      
+
       - run: terraform init
         working-directory: ${{ matrix.dir }}
       - run: terraform validate
         working-directory: ${{ matrix.dir }}
       - run: terraform plan -out=plan.out
         working-directory: ${{ matrix.dir }}
-      
+
       - name: Generate Terraform plan JSON
         run: terraform show -json plan.out > plan.json
         working-directory: ${{ matrix.dir }}
-      
+
       - name: Display Terraform plan
         run: |
           echo "## Terraform Plan for ${{ matrix.dir }}"
@@ -82,38 +85,33 @@ jobs:
             echo "JSON plan file size: $(wc -c < plan.json) bytes"
           fi
         working-directory: ${{ matrix.dir }}
-      
+
       - name: Comment PR with plan
-        if: inputs.pr_number
+        if: ${{ inputs.pr_number }}
         uses: actions/github-script@v7
-        continue-on-error: true
         with:
-          github-token: ${{ inputs.github_token }}
+          github-token: ${{ secrets.github_token }}
           script: |
             const targetOwner = '${{ inputs.target_repo_owner }}' || context.repo.owner;
             const targetRepo = '${{ inputs.target_repo_name }}' || context.repo.repo;
             const prNumber = '${{ inputs.pr_number }}';
-            
+
             const message = `## Terraform Plan for \`${{ matrix.dir }}\`
-            
+
             ✅ Terraform plan completed successfully.
-            
+
             - **Directory**: \`${{ matrix.dir }}\`
             - **Status**: Plan generated
             - **Time**: ${new Date().toISOString()}
             `;
-            
-            try {
-              if (prNumber && prNumber !== '') {
-                await github.rest.issues.createComment({
-                  issue_number: parseInt(prNumber),
-                  owner: targetOwner,
-                  repo: targetRepo,
-                  body: message
-                });
-              }
-            } catch (error) {
-              // Comment failed - continuing silently
+
+            if (prNumber && prNumber !== '') {
+              await github.rest.issues.createComment({
+                issue_number: parseInt(prNumber),
+                owner: targetOwner,
+                repo: targetRepo,
+                body: message
+              });
             }
 
   pr-verification:
