--- a/.github/workflows/pr-verification.yml
+++ b/.github/workflows/pr-verification.yml
@@ -16,8 +16,8 @@ on:
         required: false
         type: string
     secrets:
-      GITHUB_TOKEN:
-        description: 'GitHub token with permissions to comment on the target repository'
+      PR_COMMENT_TOKEN:   # <-- renamed; do NOT use GITHUB_TOKEN here
+        description: 'Token with permission to comment on the source PR'
         required: true
       AWS_ACCESS_KEY_ID:
         required: true
@@ -25,6 +25,10 @@ on:
         required: true
       AWS_DEFAULT_REGION:
         required: true
+
+permissions:
+  contents: read
+  pull-requests: write
 
 jobs:
   find-all-terraform-modules:
@@ -59,9 +63,9 @@ jobs:
       matrix:
         dir: ${{ fromJson(needs.find-all-terraform-modules.outputs.tf_dirs) }}
     env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_ACCESS_KEY_ID:     ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+      AWS_DEFAULT_REGION:    ${{ secrets.AWS_DEFAULT_REGION }}
     steps:
       - uses: actions/checkout@v4
       - uses: hashicorp/setup-terraform@v3
@@ -87,14 +91,14 @@ jobs:
         working-directory: ${{ matrix.dir }}
 
       - name: Comment PR with plan
-        if: ${{ inputs.pr_number }}
+        if: ${{ inputs.pr_number != '' }}
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.PR_COMMENT_TOKEN }}   # <-- use the renamed secret
           script: |
             const targetOwner = '${{ inputs.target_repo_owner }}' || context.repo.owner;
-            const targetRepo = '${{ inputs.target_repo_name }}' || context.repo.repo;
-            const prNumber = '${{ inputs.pr_number }}';
+            const targetRepo  = '${{ inputs.target_repo_name }}'  || context.repo.repo;
+            const prNumber    = parseInt('${{ inputs.pr_number }}');
 
             const message = `## Terraform Plan for \`${{ matrix.dir }}\`
 
@@ -105,11 +109,11 @@ jobs:
             - **Time**: ${new Date().toISOString()}
             `;
 
-            if (prNumber && prNumber !== '') {
+            if (!isNaN(prNumber)) {
               await github.rest.issues.createComment({
-                issue_number: parseInt(prNumber),
                 owner: targetOwner,
                 repo: targetRepo,
+                issue_number: prNumber,
                 body: message
               });
             }
