--- a/.github/workflows/pr-verification.yml
+++ b/.github/workflows/pr-verification.yml
@@ -16,7 +16,7 @@ on:
         required: false
         type: string
     secrets:
-      PR_COMMENT_TOKEN:   # <-- renamed; do NOT use GITHUB_TOKEN here
+      PR_COMMENT_TOKEN:        # PAT or token passed by caller; DON'T use GITHUB_TOKEN here
         description: 'Token with permission to comment on the source PR'
         required: true
       AWS_ACCESS_KEY_ID:
@@ -25,10 +25,6 @@ on:
         required: true
       AWS_DEFAULT_REGION:
         required: true
-
-permissions:
-  contents: read
-  pull-requests: write
 
 jobs:
   find-all-terraform-modules:
@@ -41,6 +37,7 @@ jobs:
 
       - name: Discover all folders containing .tf
         id: set-tf-dirs
+        shell: bash
         run: |
           mapfile -t tf_dirs < <(
             find . -type f -name '*.tf' -not -path './.git/*' \
@@ -70,11 +67,16 @@ jobs:
       - uses: actions/checkout@v4
       - uses: hashicorp/setup-terraform@v3
 
-      - run: terraform init
+      - name: Terraform init
+        run: terraform init
         working-directory: ${{ matrix.dir }}
-      - run: terraform validate
+
+      - name: Terraform validate
+        run: terraform validate
         working-directory: ${{ matrix.dir }}
-      - run: terraform plan -out=plan.out
+
+      - name: Terraform plan
+        run: terraform plan -out=plan.out
         working-directory: ${{ matrix.dir }}
 
       - name: Generate Terraform plan JSON
@@ -82,6 +84,7 @@ jobs:
         working-directory: ${{ matrix.dir }}
 
       - name: Display Terraform plan
+        shell: bash
         run: |
           echo "## Terraform Plan for ${{ matrix.dir }}"
           echo "Plan file created successfully"
@@ -91,16 +94,17 @@ jobs:
         working-directory: ${{ matrix.dir }}
 
       - name: Comment PR with plan
-        if: ${{ inputs.pr_number != '' }}
+        if: ${{ inputs.pr_number && inputs.pr_number != '' }}
         uses: actions/github-script@v7
+        continue-on-error: true
         with:
-          github-token: ${{ secrets.PR_COMMENT_TOKEN }}   # <-- use the renamed secret
+          github-token: ${{ secrets.PR_COMMENT_TOKEN }}   # token provided by caller
           script: |
-            const targetOwner = '${{ inputs.target_repo_owner }}' || context.repo.owner;
-            const targetRepo  = '${{ inputs.target_repo_name }}'  || context.repo.repo;
-            const prNumber    = parseInt('${{ inputs.pr_number }}');
+            const owner = '${{ inputs.target_repo_owner }}' || context.repo.owner;
+            const repo  = '${{ inputs.target_repo_name }}'  || context.repo.repo;
+            const prNum = parseInt('${{ inputs.pr_number }}', 10);
 
-            const message = `## Terraform Plan for \`${{ matrix.dir }}\`
+            const body = `## Terraform Plan for \`${{ matrix.dir }}\`
 
             ✅ Terraform plan completed successfully.
 
@@ -109,12 +113,9 @@ jobs:
             - **Time**: ${new Date().toISOString()}
             `;
 
-            if (!isNaN(prNumber)) {
+            if (!Number.isNaN(prNum)) {
               await github.rest.issues.createComment({
-                owner: targetOwner,
-                repo: targetRepo,
-                issue_number: prNumber,
-                body: message
+                owner, repo, issue_number: prNum, body
               });
             }
 
