--- a/.github/workflows/pr-verification.yml
+++ b/.github/workflows/pr-verification.yml
@@ -4,20 +4,19 @@ on:
   workflow_call:
     inputs:
       pr_number:
-        description: 'Pull Request number for commenting'
-        required: false
+        description: 'Pull Request number to comment on'
+        required: true
         type: string
       target_repo_owner:
-        description: 'Owner of the repository where PR should be commented'
-        required: false
+        description: 'Owner of the repository where the PR lives (e.g., chakratechgeek)'
+        required: true
         type: string
       target_repo_name:
-        description: 'Name of the repository where PR should be commented'
-        required: false
+        description: 'Name of the repository where the PR lives (e.g., sstest)'
+        required: true
         type: string
     secrets:
-      PR_COMMENT_TOKEN:        # PAT or token passed by caller; DON'T use GITHUB_TOKEN here
-        description: 'Token with permission to comment on the source PR'
+      PR_COMMENT_TOKEN:          # Fine-grained PAT with Issues & Pull requests: write on target repo
         required: true
       AWS_ACCESS_KEY_ID:
         required: true
@@ -34,6 +33,12 @@ jobs:
       tf_dirs: ${{ steps.set-tf-dirs.outputs.tf_dirs }}
     steps:
       - uses: actions/checkout@v4
+
+      - name: Ensure jq is available
+        run: |
+          if ! command -v jq >/dev/null 2>&1; then
+            sudo apt-get update && sudo apt-get install -y jq
+          fi
 
       - name: Discover all folders containing .tf
         id: set-tf-dirs
@@ -83,50 +88,28 @@ jobs:
         run: terraform show -json plan.out > plan.json
         working-directory: ${{ matrix.dir }}
 
-      - name: Display Terraform plan
-        shell: bash
-        run: |
-          echo "## Terraform Plan for ${{ matrix.dir }}"
-          echo "Plan file created successfully"
-          if [ -f plan.json ]; then
-            echo "JSON plan file size: $(wc -c < plan.json) bytes"
-          fi
-        working-directory: ${{ matrix.dir }}
-
-      - name: Comment PR with plan
-        if: ${{ inputs.pr_number && inputs.pr_number != '' }}
-        uses: actions/github-script@v7
-        continue-on-error: true
+      - name: Comment PR with plan result
+        uses: peter-evans/create-or-update-comment@v4
         with:
-          github-token: ${{ secrets.PR_COMMENT_TOKEN }}   # token provided by caller
-          script: |
-            const owner = '${{ inputs.target_repo_owner }}' || context.repo.owner;
-            const repo  = '${{ inputs.target_repo_name }}'  || context.repo.repo;
-            const prNum = parseInt('${{ inputs.pr_number }}', 10);
+          token: ${{ secrets.PR_COMMENT_TOKEN }}
+          repository: ${{ inputs.target_repo_owner }}/${{ inputs.target_repo_name }}
+          issue-number: ${{ inputs.pr_number }}
+          body: |
+            ## Terraform Plan for `${{ matrix.dir }}`
+            ✅ Plan completed successfully.
 
-            const body = `## Terraform Plan for \`${{ matrix.dir }}\`
-
-            ✅ Terraform plan completed successfully.
-
-            - **Directory**: \`${{ matrix.dir }}\`
+            - **Directory**: `${{ matrix.dir }}`
             - **Status**: Plan generated
-            - **Time**: ${new Date().toISOString()}
-            `;
-
-            if (!Number.isNaN(prNum)) {
-              await github.rest.issues.createComment({
-                owner, repo, issue_number: prNum, body
-              });
-            }
+            - **Timestamp**: ${{ github.run_id }} / ${{ github.run_number }}
 
   pr-verification:
-    name: PR Verification
+    name: PR Verification Summary
     runs-on: ubuntu-latest
     needs: [find-all-terraform-modules, terraform-plan]
     if: always()
     steps:
-      - name: Summary
+      - name: Summarize
         run: |
           echo "✅ PR Verification completed"
-          echo "Terraform modules found: ${{ needs.find-all-terraform-modules.outputs.tf_dirs }}"
-          echo "Terraform plan result: ${{ needs.terraform-plan.result }}"
+          echo "Terraform modules: ${{ needs.find-all-terraform-modules.outputs.tf_dirs }}"
+          echo "Plan job result: ${{ needs.terraform-plan.result }}"
